# 2_Project

./: Blur.hpp  Brightness.hpp  CMakeLists.txt  Detector_edge.hpp  README.md  Trackbar.cpp  Trackbar.hpp  main.cpp
